5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1664_1397.log
== TEST (2019-04-16 11:09:16) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a =< 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
File "XXXX", line 5
    if (a =< 10.000):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:36) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:10:36) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- EXECUTION TIME:
0.13649
-- ERROR:
  File "/home/codebench/codes/1664/1397/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:38) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:10:44) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:11:11) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:11:45) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:11:56) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2)
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:22) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    b = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:20:49) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	b = input("Quanto maior que 10.000?")
	eq2 = eq + (4*b)
	print(round(eq2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    b = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:23:39) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = 10000 - a
	eq1 = (a * 5) + (eq2*4) 
	
	print(round(eq1,2))
-- OUTPUT:
44554
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:24:43) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (a * 5) + (eq2*4) 
	
	print(round(eq1,2))
-- OUTPUT:
986
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:25:11) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = int(input("Area a ser fertilizada:"))
eq = a * 5
if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (a * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
986
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:25:38) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (a * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
986.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:26:51) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
28216.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:27:05) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- EXECUTION TIME:
0.144207
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
28216.0
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
82860.0
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
46000.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:14) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
28216.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:27:57) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
28216.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:27) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
28216.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:30:36) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- EXECUTION TIME:
0.134085
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
28216.0
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
82860.0
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
46000.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:30:49) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
28216.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:31:09) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10.000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
28216.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:33:24) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- OUTPUT:
22770.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:33:37) 
-- CODE:
# Area fertilizada de 10.000 =< R$ 5,00
# area fertilizada for mais de 10.000> então pros 10.000 é 5 pro resto é 4
a = float(input("Area a ser fertilizada:"))

if (a <= 10000):
	eq = a * 5
	print(round(eq,2))
else:
	eq2 = a - 10000
	eq1 = (10000 * 5) + (eq2 * 4) 
	
	print(round(eq1,2))
-- EXECUTION TIME:
0.144017
-- TEST CASE 1:
---- input:
4554
---- correct output:
22770.0
---- user output:
22770.0
-- TEST CASE 2:
---- input:
18215
---- correct output:
82860.0
---- user output:
82860.0
-- TEST CASE 3:
---- input:
9000
---- correct output:
45000.0
---- user output:
45000.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
